objects/SPIM_KPI__c.object
<CustomObject>
    <description>Supplier Information Performance Management KPI</description>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Category</description>
        <inlineHelpText>Category</inlineHelpText>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>SIPM KPI</relationshipLabel>
        <relationshipName>SIPM_KPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <description>Formula</description>
        <inlineHelpText>Formula</inlineHelpText>
        <label>Formula</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPINo__c</fullName>
        <description>KPI Identifier</description>
        <displayFormat>KPI-{000000}</displayFormat>
        <inlineHelpText>KPI Identifier</inlineHelpText>
        <label>KPINo</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>KPI_Description__c</fullName>
        <description>KPI Description</description>
        <inlineHelpText>KPI Description</inlineHelpText>
        <label>KPI Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Target__c</fullName>
        <description>KPI Target</description>
        <inlineHelpText>KPI Target</inlineHelpText>
        <label>KPI Target</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualifier__c</fullName>
        <label>Qualifier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>People</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RowNumber__c</fullName>
        <description>Row Number</description>
        <inlineHelpText>Row Number</inlineHelpText>
        <label>RowNumber</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <description>Unit of KPI Measure</description>
        <inlineHelpText>Unit of KPI Measure</inlineHelpText>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Numeric</fullName>
                </value>
                <value>
                    <fullName>Enumaration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SIPM KPI</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Qualifier__c</columns>
        <columns>Category__c</columns>
        <columns>KPI_Target__c</columns>
        <columns>UOM__c</columns>
        <columns>RowNumber__c</columns>
        <columns>Formula__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SPIM KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIPM KPI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>